[gd_scene load_steps=8 format=3 uid="uid://deuo5pc6w8u8q"]

[ext_resource type="Script" path="res://scripts/demon_rules.gd" id="1_6tth1"]
[ext_resource type="Texture2D" uid="uid://or467j6l48mo" path="res://assets/graphics/transformation_rules/mousecat.PNG" id="2_tnfan"]
[ext_resource type="Texture2D" uid="uid://b7k5nr8g8d4c7" path="res://assets/graphics/transformation_rules/spidermouse.PNG" id="3_pme0d"]
[ext_resource type="Texture2D" uid="uid://dy13f70eoqfev" path="res://assets/graphics/transformation_rules/spidercat.PNG" id="4_pl3rk"]
[ext_resource type="Texture2D" uid="uid://dxaxf3hi18e0h" path="res://assets/graphics/transformation_rules/demon.PNG" id="5_76xxd"]
[ext_resource type="Texture2D" uid="uid://ck3qc8nx5dqwl" path="res://assets/graphics/transformation_rules/crystalball.PNG" id="6_0gww1"]
[ext_resource type="Script" path="res://scripts/upgradeCreature.gd" id="7_o77oy"]

[node name="Demon" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 190.0
offset_right = 273.0
offset_bottom = 235.0
script = ExtResource("1_6tth1")

[node name="background" type="ColorRect" parent="."]
offset_right = 182.0
offset_bottom = 39.0
color = Color(0.294118, 0.270588, 1, 1)

[node name="Alarm" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 201.0
offset_top = -2.0
offset_right = 247.0
offset_bottom = 42.0
color = Color(1, 1, 1, 0)

[node name="nb_spidercat" type="Label" parent="."]
layout_mode = 2
offset_left = 2.0
offset_top = 10.0
offset_right = 12.0
offset_bottom = 33.0
text = "1"

[node name="spidercat" type="Sprite2D" parent="."]
position = Vector2(22, 23)
scale = Vector2(0.0575804, 0.0552658)
texture = ExtResource("4_pl3rk")

[node name="plus" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 11.0
offset_right = 49.0
offset_bottom = 34.0
text = "+"

[node name="nb_catmouse" type="Label" parent="."]
layout_mode = 2
offset_left = 51.0
offset_top = 11.0
offset_right = 74.0
offset_bottom = 34.0
text = "1"

[node name="catmouse" type="Sprite2D" parent="."]
position = Vector2(122, 23)
scale = Vector2(0.0606435, 0.0631769)
texture = ExtResource("2_tnfan")

[node name="plus2" type="Label" parent="."]
layout_mode = 0
offset_left = 90.0
offset_top = 12.0
offset_right = 100.0
offset_bottom = 35.0
text = "+"

[node name="nb_spidermouse" type="Label" parent="."]
layout_mode = 2
offset_left = 100.0
offset_top = 11.0
offset_right = 123.0
offset_bottom = 34.0
text = "1"

[node name="spidermouse" type="Sprite2D" parent="."]
position = Vector2(76, 23)
scale = Vector2(0.0610463, 0.0537044)
texture = ExtResource("3_pme0d")

[node name="equal" type="Label" parent="."]
offset_left = 136.0
offset_top = 11.0
offset_right = 146.0
offset_bottom = 34.0
text = "="

[node name="demon" type="Sprite2D" parent="."]
position = Vector2(166, 23)
scale = Vector2(0.121913, 0.095786)
texture = ExtResource("5_76xxd")

[node name="upgrade" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 205.0
offset_right = 458.0
offset_bottom = 261.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("6_0gww1")
script = ExtResource("7_o77oy")

[connection signal="pressed" from="upgrade" to="upgrade" method="_button_pressed"]
